<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">hafizh_s_application4</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_email">EMAIL</string>
  <string name="lbl_profile">Profile</string>
  <string name="lbl_logout">LOGOUT</string>
  <string name="lbl_hug_u">HUG U</string>
  <string name="lbl_akunmu">AKUNMU</string>
  <string name="lbl_profilmu">PROFILMU</string>
  <string name="lbl_password">PASSWORD</string>
</resources>
